# WhispyWyser

./: .env.example  .gitignore  404.html  README.md  docker-compose.yml  index.html  mkdocs.yml  pyproject.toml  requirements-api.txt  requirements.txt  requirements_dev.txt  sitemap.xml
.github/: dependabot.yml  release-drafter.yml  release.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/workflows/: build.yaml  docs-build.yml  docs.yml  pypi.yml  release.yaml
WhispyWyser/: Dockerfile  docker-compose.yml
changelog/: index.html
common/: index.html
contributing/: index.html
docs/: common.md  contributing.md  index.md  installation.md  usage.md  whispywyser.md
examples/intro/: index.html
faq/: index.html
installation/: index.html
search/: search_index.json
tests/: __init__.py  test_whispywyser.py
usage/: index.html
whispywyser/: __init__.py  api.py  cli.py  debug.py  index.html  spell_checker.py  spell_trainer.py
whispywyser/homeassistant/: __init__.py  api.py  client.py  models.py
whispywyser/spell_check/: __init__.py
whispywyser/wfw/: handler.py  transformers_whisper.py  wfw.py
