[project]
name = "WhispyWyser"
version = "0.0.21"
dynamic = [
    "dependencies",
]
description = "The WhispyWyser project is designed to provide a flexible and efficient implementation of Voice Assistant for Home Assistant based on Faster Whisper and Wyoming protocol. This project supports both CPU and CUDA architectures, allowing for optimized performance based on the available hardware."
readme = "README.md"
requires-python = ">=3.10"
keywords = [
    "WhispyWyser",
]
license = "MIT"
authors = [
  {name = "cociweb"},
]
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Natural Language :: English",
    "Natural Language :: Hungarian",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

[project.entry-points."console_scripts"]
whispywyser = "whispywyser.cli:main"

[project.optional-dependencies]
all = [
    "WhispyWyser",
]


[tool]
[tool.setuptools.packages.find]
include = ["whispywyser*"]
exclude = ["docs*"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}


[tool.distutils.bdist_wheel]
universal = true


[tool.bumpversion]
commit = true
tag = true

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "whispywyser/__init__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'


[tool.flake8]
exclude = [
    "docs",
]
max-line-length = 88


[project.urls]
Homepage = "https://github.com/cociweb/WhispyWyser"
Documentation = "https://cociweb.github.io/WhispyWyser"
Repository = "https://github.com/cociweb/WhispyWyser.git"
Issues = "https://github.com/cociweb/WhispyWyser/issues"
Changelog = "https://github.com/cociweb/WhispyWyser/releases"

[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"
